2010-05-31  Olivier Tilloy  <olivier@tilloy.net>

Reviewed by Gustavo Noronha Silva.

        [Gtk] Implement RenderThemeGtk::systemColor to apply the correct colors
        from the current GTK theme.
        https://bugs.webkit.org/show_bug.cgi?id=37779

        * platform/gtk/RenderThemeGtk.cpp:
        (WebCore::RenderThemeGtk::RenderThemeGtk):
        (WebCore::RenderThemeGtk::systemColor):
        (WebCore::RenderThemeGtk::gtkButton):
        * platform/gtk/RenderThemeGtk.h:

Canonical link: https://commits.webkit.org/51479@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60440 268f45cc-cd09-0410-ab3c-d52691b4dbfc